Fixed overflow on listingcard component

--- a/client/src/components/ListingCard/ListingCard.css
+++ b/client/src/components/ListingCard/ListingCard.css
@@ -46,6 +46,7 @@ a {
   font-weight: 1000;
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
+  max-width: 80vw;
 }
 
 .h3-listing {
